# reckon

./: .edict.toml  .gitignore  .sealignore  AGENTS.md  Cargo.toml  README.md  justfile
.agents/edict/: .version  start.md  worker-loop.md
.bones/events/: 2026-05.events  2026-05.manifest  2026-06.events
crates/reckon-cli/: Cargo.toml
crates/reckon-cli/src/: main.rs  pricing_refresh.rs  render.rs  report.rs
crates/reckon-cli/src/snapshots/: reckon__render__tests__snapshot_json_by_source.snap  reckon__render__tests__snapshot_json_default.snap  reckon__render__tests__snapshot_json_with_balance.snap  reckon__render__tests__snapshot_table_all_columns.snap  reckon__render__tests__snapshot_table_by_source.snap  reckon__render__tests__snapshot_table_default.snap  reckon__render__tests__snapshot_table_no_breakdown.snap  reckon__render__tests__snapshot_table_with_balance.snap
crates/reckon-core/: Cargo.toml
crates/reckon-core/assets/: pricing-fallback.json
crates/reckon-core/src/: cache.rs  lib.rs  model_map.rs  pricing.rs  tz.rs
crates/reckon-readers/: Cargo.toml
crates/reckon-readers/src/: claude.rs  codex.rs  gemini.rs  lib.rs  opencode.rs  openrouter.rs  pi.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
notes/: plan.md
scripts/: bench-warm.sh  check-no-tokio.sh
tests/fixtures/claude/: sample.jsonl
tests/fixtures/claude-dedup/-project-alpha/: session1.jsonl
tests/fixtures/claude-dedup/-project-beta/: session2.jsonl
tests/fixtures/codex/: rollout-sample.jsonl
tests/fixtures/gemini/: session-sample.json
tests/fixtures/pi/: sample.jsonl
