[workspace]
members = [
    "crates/reckon-core",
    "crates/reckon-readers",
    "crates/reckon-cli",
    "crates/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
