[package]
name = "reckon-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "reckon"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }

[dependencies]
reckon-core = { path = "../reckon-core" }
reckon-readers = { path = "../reckon-readers" }
asupersync = { version = "0.2", features = ["tls", "tls-webpki-roots", "proc-macros"] }
tabled = { version = "0.18", features = ["ansi"] }
minreq = { version = "2", features = ["https"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
