[package]
name = "reckon-core"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2"
iana-time-zone = "0.1"

[dev-dependencies]
filetime = "0.2"
proptest = "1"
tempfile = "3"
