[package]
name = "reckon-readers"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
asupersync = { version = "0.2", features = ["proc-macros"] }
async-trait = "0.1"
futures = "0.3"
reckon-core = { path = "../reckon-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
