[package]
name = "reckon-readers"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
asupersync = { version = "0.2", features = ["proc-macros", "tls-webpki-roots"] }
async-trait = "0.1"
futures = "0.3"
reckon-core = { path = "../reckon-core" }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = { version = "1", features = ["parse"] }

[dev-dependencies]
filetime = "0.2"
proptest = "1"
tempfile = "3"
