[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1"
# https-rustls-probe adds OS-native roots so vendor-pricing works behind
# TLS-intercepting proxies (e.g. Netskope). See bn-ud1.
minreq = { version = "2", features = ["https", "https-rustls-probe"] }
